vlib/v/checker/tests/globals/unknown_typ.out
vlib/v/checker/tests/globals/unknown_typ.vv:1:19: error: unknown type `foo`
    1 | __global global_x foo
      |                   ~~~
    2 | __global (
    3 |     global_y = float(5.0)
vlib/v/checker/tests/globals/unknown_typ.vv:3:13: error: unknown function: float
    1 | __global global_x foo
    2 | __global (
    3 |     global_y = float(5.0)
      |                ~~~~~~~~~~
    4 | )
