vlib/v/checker/tests/globals/unknown_typ.vv
__global global_x foo
__global (
	global_y = float(5.0)
)
